Alignment issues with the NYS Search box

--- a/excelsior/scss/excelsior/components/_navigation.scss
+++ b/excelsior/scss/excelsior/components/_navigation.scss
@@ -482,7 +482,8 @@
     @include transition(height 0s ease);
 
     input[type="search"] {
-      height: 25px;
+      height: 23px;
+      margin-top:1px;
     }
 
     input[type="submit"] {
@@ -537,7 +538,7 @@
   }
 
   .gov-bar .search-container {
-    margin: -1px 9px 0 0;
+    margin-right:9px;
   }
 
   .gov-bar form {
